--- a/src/templates/pages/favorites/collection/list.html
+++ b/src/templates/pages/favorites/collection/list.html
@@ -7,6 +7,7 @@
 {% block extra_css %}
   <link rel="stylesheet" href="{% static 'css/pages/favorites-collection-list.css' %}">
   <link rel="stylesheet" href="{% static 'css/components/collection-create-modal.css' %}">
+  <link rel="stylesheet" href="{% static 'css/components/collection_delete_modal.css' %}">
 {% endblock %}
 
 {% block extra_js %}
@@ -97,6 +98,7 @@
 
   <!-- Include Modal Template -->
   {% include 'components/favorites/collection_create_modal.html' %}
+  {% include 'components/favorites/collection_delete_confirmation_modal.html' %}
 
   <!-- Hidden template for JavaScript (only needed when no collections exist) -->
   {% if not has_collections %}
