--- a/src/templates/components/favorites/collection_card_empty_template.html
+++ b/src/templates/components/favorites/collection_card_empty_template.html
@@ -7,13 +7,19 @@
           <span class="collection-actions">
             <button type="button"
                     class="btn btn-link p-0 ms-2 set-default-btn"
-                    data-collection-id=""
+                    data-collection-id="PLACEHOLDER_ID"
                     title="Set as default collection">
               <i class="fas fa-star text-muted"></i>
             </button>
             <button type="button"
+                    class="btn btn-link p-0 ms-2 clear-collection-btn"
+                    data-collection-id="PLACEHOLDER_ID"
+                    title="Clear collection">
+              <i class="fas fa-broom text-muted"></i>
+            </button>
+            <button type="button"
                     class="btn btn-link p-0 ms-2 delete-collection-btn"
-                    data-collection-id=""
+                    data-collection-id="PLACEHOLDER_ID"
                     title="Delete collection">
               <i class="fas fa-trash-alt text-muted"></i>
             </button>
