--- a/src/templates/components/header.html
+++ b/src/templates/components/header.html
@@ -38,6 +38,22 @@
                   <i class="fas fa-plus-circle me-2"></i>Add Product
                 </a>
               </li>
+              <li><hr class="dropdown-divider"></li>
+              <li>
+                <a class="dropdown-item" href="{% url 'catalog:category_create' 'master' %}">
+                  <i class="fas fa-layer-group me-2"></i>Add Master Category
+                </a>
+              </li>
+              <li>
+                <a class="dropdown-item" href="{% url 'catalog:category_create' 'sub' %}">
+                  <i class="fas fa-tags me-2"></i>Add Subcategory
+                </a>
+              </li>
+              <li>
+                <a class="dropdown-item" href="{% url 'catalog:category_create' 'article' %}">
+                  <i class="fas fa-tag me-2"></i>Add Article Type
+                </a>
+              </li>
             </ul>
           </li>
         {% endif %}
