--- a/src/templates/pages/favorites/collection/detail.html
+++ b/src/templates/pages/favorites/collection/detail.html
@@ -191,6 +191,16 @@
           {% endwith %}
         {% endfor %}
       </div>
+
+       <!-- Pagination -->
+      {% if favorite_items.has_other_pages %}
+        <div class="row mt-5">
+          <div class="col-12">
+            {% include 'components/pagination.html' with items=favorite_items %}
+          </div>
+        </div>
+      {% endif %}
+
     {% else %}
       <div class="text-center text-muted py-5">
         <div class="empty-state">
