--- a/src/templates/pages/favorites/collection/detail.html
+++ b/src/templates/pages/favorites/collection/detail.html
@@ -16,6 +16,7 @@
   <script type="module" src="{% static 'js/components/collection-reorder.js' %}" defer></script>
   <script type="module" src="{% static 'js/components/load-more.js' %}" defer></script>
   <script type="module" src="{% static 'js/components/favorite-privacy-toggle.js' %}"></script>
+  <script type="module" src="{% static 'js/components/favorite-products-delete.js' %}"></script>
 {% endblock %}
 
 {% block content %}
@@ -268,6 +269,15 @@
         </div>
       </div>
     {% endif %}
+
+     <!-- Delete Floating Toolbar -->
+    <div class="admin-toolbar position-fixed" style="top: 20px; right: 20px; z-index: 1200; display: none;">
+      <div class="btn-group-vertical shadow">
+        <button id="bulk-delete-btn" class="btn btn-danger" title="Delete selected items">
+          <i class="fas fa-trash-alt"></i>
+        </button>
+      </div>
+    </div>
 
   </div>
 {% endblock %}
