--- a/src/templates/components/favorites/favorite_item_empty_template.html
+++ b/src/templates/components/favorites/favorite_item_empty_template.html
@@ -80,6 +80,16 @@
         </div>
       </div>
 
+      <div class="collection-empty-state text-center text-muted py-5" style="display:none;">
+        <div class="empty-state">
+          <div class="empty-icon">
+            <i class="fas fa-heart-broken"></i>
+          </div>
+          <h3>This collection is empty</h3>
+          <p>Add some products to see them here</p>
+        </div>
+      </div>
+      
       <div class="card-decoration">
         <div class="decoration-dot dot-1"></div>
         <div class="decoration-dot dot-2"></div>
